# Notes2025

./: AdvancedDataMining.md  CoddDiscussion.md  HPC.md  README.md  trc.txt
Assignments/DataMining/: quizHelper.py
Assignments/DatabaseSystems/: HWConcurencyControl.md  drc.txt  trc.txt
Assignments/DatabaseSystems/Cyper/: cypher.txt
Assignments/DatabaseSystems/InfoRetrieval/: Computer Science _ USU.htm  Graduate_Programs_CS_USU.htm  History_Computer Science_USU.htm  Research_Interests_CS_USU.htm  helper.py  infoRetrievalAndDistDB.txt
Assignments/DatabaseSystems/InfoRetrieval/Computer Science _ USU_files/: bootstrap.min.css  css.css  embed-feed.css  global-custom.css  modular.css  moment.min-2.29.3.js
Assignments/DatabaseSystems/InfoRetrieval/Graduate_Programs_CS_USU_files/: init.js  main.css
Assignments/DatabaseSystems/XQuery/: attributes.xq  booksByAuthor.xq  byPublisher.xq  names.xq  related.xq  twoAuthors.xq
Assignments/DatabaseSystems/couchDB/: queries.txt
Assignments/DatabaseSystems/des/: DES6.7.acideProject  DESDevel.acideProject  MANIFEST.MF  createtables.txt  datalog.dl  des.cnf  query.dl  tuples.txt
Assignments/DatabaseSystems/des/configuration/: configuration.properties
Assignments/DatabaseSystems/des/doc/: readme.txt  releasenotesACIDE.txt
Assignments/DatabaseSystems/des/examples/: ackermann.dl  aggregates.dl  aggregates.sql  bridge.dl  camera.dl  ddb.pl  division.drc  division.trc  empTraining.drc  empTraining.ra  empTraining.sql  empTraining.trc  even_odd.ra  even_odd.sql  factorial.ra  family.ra  family.sql  fib.dl  fib.ra  fib.sql  fib_top.sql  flights.dl  flights.ra  flights.sql  flights_compact.sql  game.dl  game2.dl  grammar.dl  hanoi.dl  hflights.sql  integers.dl  jobs.drc  jobs.trc  loop.dl  mrtc.dl  mutrecursion.dl  mutrecursion.ra  nat.ra  (+34 more)
Assignments/HPC/: HW2.cpp  HW3.cpp  HW3.md  PGAS.txt  histogram.cpp  histogramTiming.py  new_histogram.cpp
Assignments/HPC/hw5.1/: kernel.cu  main.cu
Assignments/HPC/hw52/: transpose.cu
Assignments/scratch/: IBM_Scratch.py  balancer.py
Notes/: AdvancedDataMining.md
Notes/HpcSampleCode/omp2/omp_msg_cmake/: CMakeLists.txt
(+73 files in other folders)
